--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,11 +93,11 @@ jobs:
         kubectl version
         kubectl config current-context
         sed -i.bak "s|VAL_DOCKER_IMAGE|$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG|g" kubernetes/hack-app.yaml
-        sed -i.bak "s,VAL_POSTGRES_DB_NAME,${{secrets.DB_NAME}}," kubernetes/postgres/hack-app.yaml
-        sed -i.bak "s,VAL_POSTGRES_DB_USER,${{secrets.DB_USER}}," kubernetes/postgres/hack-app.yaml
-        sed -i.bak "s,VAL_POSTGRES_DB_PASSWORD,${{secrets.DB_PASS}}," kubernetes/postgres/hack-app.yaml
-        sed -i.bak "s,VAL_POSTGRES_DB_HOST,${{secrets.DB_HOST}}," kubernetes/postgres/hack-app.yaml
-        sed -i.bak "s,VAL_POSTGRES_DB_PORT,${{secrets.DB_PORT}}," kubernetes/postgres/hack-app.yaml
+        sed -i.bak "s,VAL_POSTGRES_DB_NAME,${{secrets.DB_NAME}}," kubernetes/hack-app.yaml
+        sed -i.bak "s,VAL_POSTGRES_DB_USER,${{secrets.DB_USER}}," kubernetes/hack-app.yaml
+        sed -i.bak "s,VAL_POSTGRES_DB_PASSWORD,${{secrets.DB_PASS}}," kubernetes/hack-app.yaml
+        sed -i.bak "s,VAL_POSTGRES_DB_HOST,${{secrets.DB_HOST}}," kubernetes/hack-app.yaml
+        sed -i.bak "s,VAL_POSTGRES_DB_PORT,${{secrets.DB_PORT}}," kubernetes/hack-app.yaml
         kubectl apply -f kubernetes/hack-app.yaml
         kubectl apply -f kubernetes/hack-svc.yaml
         kubectl apply -f kubernetes/metrics.yaml
